@@ -1,3 +1,6 @@
+2003-05-01	fabian
+    * removed scrollback settings in UI for performance reasons.
+    
 2003-04-29	ujwal
 
     * Fixed bug in storing and reading for scrollback lines preference.
